src/options.zig

//! Option system — replaces `joe/options.c`.
//!
//! Faithful C-ABI port of JOE's options / glopt / setopt subsystem.
//! Generated from a goto-free rewrite of options.c via `zig translate-c`,
//! then cleaned for the hybrid Zig+C build.

const std = @import("std");
const ptrdiff_t = c_long;
const HEX_RESTORE_UTF8: c_int = 2;
const HEX_RESTORE_CRLF: c_int = 4;
const HEX_RESTORE_INSERT: c_int = 8;
const HEX_RESTORE_WORDWRAP: c_int = 16;
const HEX_RESTORE_AUTOINDENT: c_int = 32;
const HEX_RESTORE_ANSI: c_int = 64;
const HEX_RESTORE_PICTURE: c_int = 128;
const OPT_BUF_SIZE: c_int = 300;
const TYPETW: c_int = 256;
const TYPEPW: c_int = 512;
const JOE_MSGBUFSIZE: c_int = 300;

pub extern fn printf(fmt: [*c]const u8, ...) c_int;
pub extern fn snprintf(buf: [*c]u8, n: c_ulong, fmt: [*c]const u8, ...) c_int;
pub extern fn getenv(name: [*c]const u8) [*c]u8;
pub extern fn strcmp(__s1: [*c]const u8, __s2: [*c]const u8) c_int;
pub extern fn strcpy(__dst: [*c]u8, __src: [*c]const u8) [*c]u8;
pub extern fn strlen(__s: [*c]const u8) usize;
pub extern fn strrchr(__s: [*c]const u8, __c: c_int) [*c]u8;
